# drift

./: .env  .gitignore  NEXT_STEPS.md  README.md  TRACE_SCHEMA.md  first.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/skills/drift-context/: SKILL.md
docs/design/: fork_edit_replay_v1.md
docs/detectors/: contradictory_decisions.md  hallucinated_reference.md  stale_state_reference.md
examples/: byoa_minimal.py
examples/adapters/: fork_edit_demo.py  langgraph_demo.py  maestro_to_drift.py  mast_guidelines.txt  run_detectors_on_mast.py  run_drift_judge_on_maestro.py  run_drift_judge_on_mast.py  run_drift_on_adversarial_mas.py  run_drift_on_deepagents.py  run_drift_on_langgraph_supervisor.py  run_drift_on_maestro.py  run_drift_on_supervisor_extended.py  sweep_langgraph_supervisor.py  sweep_state_shapes.py  validate_detectors_structured.py
examples/traces/: support_sample.jsonl
results/maestro_judge/multi_full/: 20251208_164806.json  20251208_173133.json  20251208_173911.json  20251209_193712.json  20251211_154137.json  20251211_155253.json  20251211_155401.json  20251211_172023.json  20251211_172700.json  20251211_172945.json  20251211_173604.json  20251211_173734.json  20251211_173815.json  20251211_182828.json  20251211_203404.json  20251211_220958.json  20251222_161435.json  20251222_161503.json  20251222_161538.json  20251222_161832.json  20251222_161900.json  20251222_161936.json  20251222_162005.json  20251222_162040.json  20251222_162108.json  20251222_162143.json  (+139 more)
scenarios/: black_friday.yaml  ops_storm.yaml  policy_chaos.yaml  queue_overflow.yaml  release_pressure.yaml
src/drift/: __init__.py  __main__.py  analyze.py  cli.py  fork.py  memory.py  sdk.py  server.py  simulation.py  testing.py  world.py
tests/: test_chaos.py  test_detectors.py  test_fork.py  test_judge.py  test_langgraph_adapter.py  test_library_detectors.py  test_simulation_smoke.py  test_topologies.py  test_world.py
web/: app.js  index.html  styles.css
(+136 files in other folders)
