[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift"
version = "0.1.0"
description = "Multi-agent stress-test simulator for emergent failures in evolving environments"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai    = ["openai>=1.40"]
web       = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
# The langgraph adapter doesn't import langgraph itself — it works against
# anything with .invoke / .ainvoke. This extra just pulls langgraph in for
# users who want to run drift_test against a real compiled StateGraph.
langgraph = ["langgraph>=0.2"]
# Pulls in real langgraph multi-agent libraries we run drift against for
# empirical validation. Optional; only needed to reproduce the
# examples/adapters/run_drift_on_*.py scripts.
validation = ["langgraph>=0.2", "langgraph-supervisor>=0.0.20", "langchain-openai>=0.2"]
dev       = ["pytest>=7", "pytest-asyncio>=0.23"]

[project.scripts]
drift = "drift.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
